[package]
name = "moore-neighborhood"
version = "0.1.0"
description = "Calculates Moore neighborhoods (8-connected) for arbitrary ranges and dimensions"
keywords = ["neighborhood", "8-connected", "moore"]
categories = ["computer-vision", "graphics", "game-development"]
authors = ["Markus Mayer <widemeadows@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/sunsided/moore-neighborhood-rs"

[[bench]]
name = "port_benchmark"
harness = false

[dependencies]

[dev-dependencies]
criterion = "0.3.4"
