[package]
name = "moore-neighborhood"
version = "0.2.0"
description = "Calculates Moore neighborhoods (8-connected) for arbitrary ranges and dimensions"
keywords = ["neighborhood", "8-connected", "moore"]
categories = ["computer-vision", "graphics", "game-development"]
authors = ["Markus Mayer <widemeadows@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
changelog = "CHANGELOG.md"
repository = "https://github.com/sunsided/moore-neighborhood-rs"

[[bench]]
name = "port_benchmark"
harness = false

[[bench]]
name = "macro_benchmark"
harness = false

[[bench]]
name = "port_generic_full_benchmark"
harness = false

[[bench]]
name = "port_generic_dimension_benchmark"
harness = false

[features]
default = ["std"]
std = []

[dependencies]

[dev-dependencies]
criterion = "0.4.0"
